# END-dsl-implementations

./: .gitignore  DSL.org  DSL.txt  LICENSE  README.org
benchmark/: run-benchmarks.sh
halide/: DSL.cpp  Makefile  README.org  clock.h  prog1.cpp  prog2.cpp  prog3.cpp  prog4.cpp  prog5.cpp
halide/audio-processing/: Makefile  README.org  audio-processing.cpp
haskell/small-image-processing-dsl/: README.org  small-image-processing-dsl.cabal  stack.yaml
haskell/small-image-processing-dsl/app/: prog1-gadt.hs  prog1-shallow-array.hs  prog1-shallow-vector.hs  prog2-shallow-array.hs  prog2-shallow-repa.hs  prog3-deep-gadt.hs  prog3-shallow-array.hs  prog3-shallow-repa.hs  prog3-shallow-vector.hs  prog4-deep-gadt.hs  prog4-gadt.hs  prog4-shallow-array.hs  prog4-shallow-vector.hs
haskell/small-image-processing-dsl/app/deep-accelerate/: prog1.hs  prog2.hs  prog3.hs  prog4.hs  prog5.hs
haskell/small-image-processing-dsl/app/deep-gadt/: prog1-deep-gadt.hs  prog1.hs  prog2.hs  prog3.hs  prog4.hs  prog5.hs
haskell/small-image-processing-dsl/app/shallow-repa/: prog1-shallow-repa.hs  prog1.hs  prog2.hs  prog3.hs  prog4.hs  prog5.hs
haskell/small-image-processing-dsl/app/shallow-vector/: prog1.hs  prog2-shallow-vector.hs  prog2.hs  prog3.hs  prog4.hs  prog5.hs
haskell/small-image-processing-dsl/app/shallow-vectors/: prog1-shallow-vector.hs
haskell/small-image-processing-dsl/src/: DeepAccelerate.hs  DeepGADT.hs  GADT.hs  IO.hs  Shallow.hs  ShallowArray.hs  ShallowRepa.hs  ShallowVector.hs  Types.hs
images/: attribution.txt
sac/: DSL.sac  Makefile  prog1.sac  prog2.sac  prog3.sac  prog4.sac  prog5.sac
