name:                small-image-processing-dsl
version:             0.1.0.0
synopsis:            Shallow and deep embeddings of a small image processing DSL
description:         Please see README.md
homepage:            https://github.com/robstewart57/small-image-processing-dsl-implementations
license:             BSD3
license-file:        LICENSE
author:              Rob Stewart
maintainer:          robstewart57@gmail.com
copyright:           2016 Rob Stewart, EPSRC Rathlin Project EP/K009931/1
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeepGADT
                     , DeepAccelerate
                     , ShallowVector
                     , ShallowRepa
                     , IO
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , repa
  default-language:    Haskell2010

executable prog1-shallow-vector
  hs-source-dirs:      app/shallow-vector
  main-is:             prog1-shallow-vector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog2-shallow-vector
  hs-source-dirs:      app/shallow-vector
  main-is:             prog2-shallow-vector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog3-shallow-vector
  hs-source-dirs:      app/shallow-vector
  main-is:             prog3-shallow-vector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog4-shallow-vector
  hs-source-dirs:      app/shallow-vector
  main-is:             prog4-shallow-vector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog1-shallow-repa
  hs-source-dirs:      app/shallow-repa
  main-is:             prog1-shallow-repa.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog2-shallow-repa
  hs-source-dirs:      app/shallow-repa
  main-is:             prog2-shallow-repa.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog3-shallow-repa
  hs-source-dirs:      app/shallow-repa
  main-is:             prog3-shallow-repa.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog4-shallow-repa
  hs-source-dirs:      app/shallow-repa
  main-is:             prog4-shallow-repa.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog1-deep-gadt
  hs-source-dirs:      app/deep-gadt
  main-is:             prog1-deep-gadt.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog2-deep-gadt
  hs-source-dirs:      app/deep-gadt
  main-is:             prog2-deep-gadt.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog3-deep-gadt
  hs-source-dirs:      app/deep-gadt
  main-is:             prog3-deep-gadt.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog4-deep-gadt
  hs-source-dirs:      app/deep-gadt
  main-is:             prog4-deep-gadt.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog1-deep-accelerate
  hs-source-dirs:      app/deep-accelerate
  main-is:             prog1-deep-accelerate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog2-deep-accelerate
  hs-source-dirs:      app/deep-accelerate
  main-is:             prog2-deep-accelerate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog3-deep-accelerate
  hs-source-dirs:      app/deep-accelerate
  main-is:             prog3-deep-accelerate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010

executable prog4-deep-accelerate
  hs-source-dirs:      app/deep-accelerate
  main-is:             prog4-deep-accelerate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , small-image-processing-dsl
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/robstewart57/small-image-processing-dsl-implementations.git
